--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,62 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  background-color: lightgray;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.div1{
+  background-color: red;
+  height: 15cm;
+  width: 9cm;
+  align-items: center;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.div2{
+  background-color: blue;
+  height: 6cm;
+  width: 9cm;
+  border-top-left-radius: 15%;
+  border-top-right-radius: 15%;
 }
 
-.card {
-  padding: 2em;
+.div3{
+  background-color: black;
+  height: 3cm;
+  width: 9cm;
 }
 
-.read-the-docs {
-  color: #888;
+.div4{
+  background-color: white;
+  height: 3cm;
+  width: 9cm;
+}
+
+.div5{
+  background-color: orange;
+  height: 3cm;
+  width: 9cm;
+  border-bottom-left-radius: 15%;
+  border-bottom-right-radius: 15%;
+}
+
+#root{
+  width: 100%;
+  height: 100%;
+}
+
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
