--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body{
   right: 0;
   margin: auto;
   border-radius: 15%;
+  box-shadow: 4cm 4cm 4cm 4cm rgba(0, 0, 0, 0.2), 6cm 6cm 6cm 6cm rgba(0, 0, 0, 0.19);
 }
 
 .div2{
@@ -28,6 +29,8 @@ body{
   width: 9cm;
   border-top-left-radius: 15%;
   border-top-right-radius: 15%;
+  background-image: url("./src/assets/frames-for-your-heart-2d4lAQAlbDA-unsplash 2 .jpg");
+
 }
 
 .div3{
