--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body{
 }
 
 .div1{
-  background-color: red;
+  background-color: white;
   height: 12cm;
   width: 9cm;
   align-items: center;
@@ -21,15 +21,15 @@ body{
   margin: auto;
   border-radius: 3%;
   box-shadow: 0cm 0cm 0.5cm 0.5cm rgba(0, 0, 0, 0.2), 0cm 0cm 0cm 0cm rgba(0, 0, 0, 0.19);
+  
 }
 
 .div2{
-  background-color: blue;
+ background-color: white;
   height: 6cm;
   width: 9cm;
   border-top-left-radius: 3%;
   border-top-right-radius: 3%;
-
 
 }
 
@@ -37,22 +37,30 @@ body{
   height: 3cm;
   width: 9cm;
   border-bottom: solid gray 0.01cm;
+  padding-bottom: 3.2cm;
+  padding-top: 0.5cm;
+  padding-left:0.3cm ;
 }
 
 .div4{
   background-color: white;
-  height: 1cm;
+  height: 1.5cm;
   width: 9cm;
   display: flex;
   border-bottom: solid gray 0.01cm;
+  padding-top: 0.5cm;
+  padding-left: 0.3cm;
 }
 
 .div5{
-  background-color: orange;
+background-color: white;
   height: 2.5cm;
   width: 9cm;
   border-bottom-left-radius: 3%;
   border-bottom-right-radius: 3%;
+  padding-top: 0.3cm;
+ padding-bottom: 2.5cm;
+ padding-left: 0.3cm;
 }
 
 #root{
@@ -92,3 +100,4 @@ body{
 .info{
   display: flex;
 }
+
