--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,13 @@ body{
   justify-content: center;
   width: 100%;
   height: 100%;
+ 
   
 
+}
+
+#main{
+  display: flex;
 }
 
 .div1{
@@ -13,7 +18,7 @@ body{
   height: 12cm;
   width: 9cm;
   align-items: center;
-  position: absolute;
+
   top:0;
   bottom: 0;
   left: 0;
