--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body{
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
+  margin: 0.5cm;
   border-radius: 3%;
   box-shadow: 0cm 0cm 0.5cm 0.5cm rgba(0, 0, 0, 0.2), 0cm 0cm 0cm 0cm rgba(0, 0, 0, 0.19);
   
